apps/base/api-job-store/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-job-store
    require-pydtk-v4: enabled
    require-webviz-config: enabled
  name: api-job-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-job-store
  strategy: {}
  template:
    metadata:
      labels:
        app: api-job-store
        version: v1
        require-auth0: enabled
        require-auth0-job-admin: enabled
    spec:
      containers:
      - image: registry.gitlab.com/dataware-tools/api-job-store:v1.4.0
        name: app
        ports:
          - containerPort: 8080
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: api-job-store
spec:
  selector:
    app: api-job-store
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dataware-tools-api-job-store
spec:
  hosts:
    - "*"
  gateways:
    - dataware-tools-gateway
  http:
    #
    # APIs
    #
    - name: api-job-store
      match:
        - uri:
            prefix: /api/latest/job_store/
      rewrite:
        uri: /
      route:
        - destination:
            host: api-job-store
